--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.4",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
     "aws-cdk": "2.161.1",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2"
   },
