--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+# Python
+Include
+Lib
+Scripts
+site-packages
+pyvenv.cfg
+__pycache__
